# zkCF_Wallet

./: .gitignore  README.md  Readme.md  foundry.toml  profile.pb
app/: Cargo.toml
app/benches/: pkcs7_parsing.rs  zkp_generation.rs
app/benches/common/: mod.rs
app/benches/test_files/certs/: ecdsa_inter_cert.pem  ecdsa_inter_csr.pem  ecdsa_inter_key.pem  ecdsa_root_cert.pem  ecdsa_root_key.pem  ecdsa_user_cert.pem  ecdsa_user_csr.pem  ecdsa_user_key.pem  rsa_inter_cert.pem  rsa_inter_csr.pem  rsa_inter_key.pem  rsa_root_cert.pem  rsa_root_key.pem  rsa_user_cert.pem  rsa_user_csr.pem  rsa_user_key.pem
app/src/: lib.rs
app/src/tests/: mod.rs
contracts/: CA_Storage.sol  CfWallet.sol  README.md
contracts/tests/: CA_Storage.t.sol  CfWallet.t.sol  Elf.sol
core/: Cargo.toml
core/src/: lib.rs
core/src/pkcs7/: decoding.rs  mod.rs  structs.rs  utils.rs
methods/: README.md  build.rs
script/: Deploy.s.sol  DeployCAStorage.s.sol  get_cakey.py
