[package]
name = "app"
version = "0.1.0"
edition = "2021"
default-run = "main"

[dependencies]
risc0-build = { version = "1.1.2", features = ["docker"] }
risc0-zkvm = { version = "1.1.2", default-features = false, features = ["client"] }
risc0-zkp = { version = "1.1.2", default-features = false }

risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.1.4" }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.1.4" }

methods = { path = "../methods" }

pkcs7-core = { path = "../core" }

alloy = { version = "0.5.4", features = ["full"] }
alloy-primitives = { version = "0.8.8", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.8" }
alloy-contract = {version = "0.5.4"}
anyhow = { version = "1.0.75" }
bincode = { version = "1.3" }
bytemuck = { version = "1.19" }
clap = { version = "4.0", features = ["derive", "env"] }
env_logger = { version = "0.11.5" }
ethers = { version = "2.0", features = ["abigen"] }
hex = { version = "0.4" }
log = { version = "0.4" }
serde = { version = "1.0", features = ["derive", "std"] }
tempfile = { version = "3.13", optional = true }
tokio = { version = "1.35", features = ["full"] }
tracing-subscriber = { version = "0.3" }
url = { version = "2.5" }
base64 = "0.22"
tiny-keccak = { version = "2.0", features = ["keccak"] }
serde_json = "1.0"
reqwest="0.12"
criterion = "0.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
temp-dir = "0.1"   # For handling test files
anyhow = "1.0"     # Error handling
colored = "2.0" 
memory-stats = "1.0"
tempfile = "3.5"
base64 = "0.22"

[[bench]]
#name = "pkcs7_parsing"
harness = false
#path = "benches/pkcs7_parsing.rs"
name = "zkp_generation"
path = "benches/zkp_generation.rs"


[lib]
name ="app"
path ="src/lib.rs"

[profile.bench]
opt-level = 1
lto = "thin"